# Eightfold-Assignment

./: README.md
configs/: custom_compact_omit.json  custom_recruiter.json
eightfold/: .gitignore  README.md  pyproject.toml  requirements.txt
eightfold/configs/: default.json
eightfold/output/: profiles_custom_compact_omit.json  profiles_custom_recruiter.json  profiles_default.json
eightfold/samples/notes/: ada_notes.txt
eightfold/samples/resumes/: alan_turing.txt
eightfold/src/transformer/: detect.py  handles.py  merge.py  models.py  pipeline.py  projection.py  skills.py  sourcerank.py  validation.py
eightfold/src/transformer/extractors/: recruiter_csv.py  resume.py
eightfold/tests/: test_merge.py  test_normalize.py  test_pipeline.py  test_projection.py  test_resume_docx.py
eightfold/tests/golden/: default_profiles.json
samples/: ats_dump.json  github_urls.txt  recruiter_export.csv
samples/github_cache/: ada-l.json  aturing.json  grace-h.json
samples/malformed/: broken_ats.json
src/transformer/: __init__.py  claim_normalize.py  cli.py  normalize.py
src/transformer/extractors/: __init__.py  ats_json.py  base.py  github.py  recruiter_notes.py
tests/: test_skills.py  test_validation.py
tools/: make_design_pdf.py
